[gd_scene load_steps=3 format=3 uid="uid://e7lwhl2veeoe"]

[ext_resource type="Script" path="res://scenes/UI/inventory_row.gd" id="1_nh5uk"]
[ext_resource type="Texture2D" uid="uid://cet36vvsrjtd6" path="res://icon.svg" id="1_stsbv"]

[node name="InventoryRow" type="MarginContainer" node_paths=PackedStringArray("icon_texture", "name_label", "stock_input")]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 138.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5
script = ExtResource("1_nh5uk")
icon_texture = NodePath("HBoxContainer/icon")
name_label = NodePath("HBoxContainer/name")
stock_input = NodePath("HBoxContainer/LineEdit")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="icon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_stsbv")

[node name="name" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item Name"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
placeholder_text = "0"
alignment = 2

[connection signal="focus_exited" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
